@@ -1228,9 +1228,13 @@ VOID ReadConfig (
         else if (MyStriCmp (TokenList[0], L"disable_amfi")) {
             GlobalConfig.DisableAMFI = HandleBoolean (TokenList, TokenCount);
         }
-        else if (MyStriCmp (TokenList[0], L"decline_macos_filter")) {
-            DeclineSetting = HandleBoolean (TokenList, TokenCount);
-            GlobalConfig.EnableMacosFilter = (DeclineSetting) ? FALSE : TRUE;
+        else if (MyStriCmp (TokenList[0], L"focus_nvram_fix")
+            ||  MyStriCmp  (TokenList[0], L"decline_macos_filter")
+        ) {
+            // DA_TAG: Accomodate Deprecation ... No Need for DeclineSetting
+            GlobalConfig.FocusNvramFix = (!AppleFirmware)
+                ? FALSE
+                : HandleBoolean (TokenList, TokenCount);
         }
         else if (MyStriCmp (TokenList[0], L"decline_reload_gop")
             ||  MyStriCmp  (TokenList[0], L"decline_reloadgop")
